--- a/templates/basefront.html.twig
+++ b/templates/basefront.html.twig
@@ -31,38 +31,25 @@ https://templatemo.com/tm-586-scholar
 
 <body>
 
-  <!-- ***** Preloader Start ***** -->
-  <div id="js-preloader" class="js-preloader">
-    <div class="preloader-inner">
-      <span class="dot"></span>
-      <div class="dots">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
-  </div>
-  <!-- ***** Preloader End ***** -->
-  <!-- ***** Header Area Start ***** -->
   <header class="header-area header-sticky">
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <nav class="main-nav">
-                    <!-- ***** Logo Start ***** -->
+                    <!-- *** Logo Start *** -->
                     <a href="index.html" class="logo">
                         <h1>Scholar</h1>
                     </a>
-                    <!-- ***** Logo End ***** -->
-                    <!-- ***** Serach Start ***** -->
+                    <!-- *** Logo End *** -->
+                    <!-- *** Serach Start *** -->
                     <div class="search-input">
                       <form id="search" action="#">
                         <input type="text" placeholder="Type Something" id='searchText' name="searchKeyword" onkeypress="handle" />
                         <i class="fa fa-search"></i>
                       </form>
                     </div>
-                    <!-- ***** Serach Start ***** -->
-                    <!-- ***** Menu Start ***** -->
+                    <!-- *** Serach Start *** -->
+                    <!-- *** Menu Start *** -->
                     <ul class="nav">
                       <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
                       <li class="scroll-to-section"><a href="#donations">Donations</a></li>
@@ -74,20 +61,22 @@ https://templatemo.com/tm-586-scholar
                     <a class='menu-trigger'>
                         <span>Menu</span>
                     </a>
-                    <!-- ***** Menu End ***** -->
+                    <!-- *** Menu End *** -->
                 </nav>
             </div>
         </div>
     </div>
   </header>
 
-  <!-- ***** Header Area End ***** -->
+  <!-- *** Header Area End *** -->
 
   <div class="main-banner" id="top">
   </div>
+  <div class="donations section" id="donations">
+
 {% block gestion %}
-<div class="donations section" id="donations">
- <div class="container">
+ 
+  <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6">
           <div class="service-item">
@@ -103,8 +92,6 @@ https://templatemo.com/tm-586-scholar
             </div>
           </div>
         </div>
-
-
         <div class="col-lg-4 col-md-6">
           <div class="service-item">
             <div class="icon">
@@ -613,6 +600,7 @@ https://templatemo.com/tm-586-scholar
     </div>
   </div>
 {% endblock %}
+
   <footer>
     <div class="container">
       <div class="col-lg-12">
