--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -86,6 +86,7 @@ https://templatemo.com/tm-586-scholar
   <div class="main-banner" id="top">
   </div>
 {% block gestion %}
+{% block code%}
 <div class="donations section" id="donations">
  <div class="container">
       <div class="row">
@@ -610,6 +611,7 @@ https://templatemo.com/tm-586-scholar
       </div>
     </div>
   </div>
+{% endblock %}
 {% endblock %}
   <footer>
     <div class="container">
