--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -110,6 +110,7 @@
             </div>
             <div id="layoutSidenav_content">
             {% block gestion %}
+            {% block code%}
                 <main>
                     <div class="container-fluid px-4">
                         <h1 class="mt-4">Dashboard</h1>
@@ -664,6 +665,7 @@
                         </div>
                     </div>
                 </main>
+                {% endblock %}
                 {% endblock %}
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
