--- a/templates/code_promo/edit.html.twig
+++ b/templates/code_promo/edit.html.twig
@@ -1,13 +1,27 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseBack.html.twig' %}
+{% block code%}
 
 {% block title %}Edit CodePromo{% endblock %}
 
 {% block body %}
-    <h1>Edit CodePromo</h1>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <h1 class="text-center mb-4">Edit CodePromo</h1>
 
-    {{ include('code_promo/_form.html.twig', {'button_label': 'Update'}) }}
+                <div class="card">
+                    <div class="card-body">
+                        {{ include('code_promo/_form.html.twig', {'button_label': 'Update'}) }}
+                    </div>
+                </div>
 
-    <a href="{{ path('app_code_promo_index') }}">back to list</a>
+                <div class="mt-4 text-center">
+                    <a href="{{ path('app_code_promo_index') }}" class="btn btn-primary">Back to List</a>
+                </div>
 
-    {{ include('code_promo/_delete_form.html.twig') }}
+                {{ include('code_promo/_delete_form.html.twig') }}
+            </div>
+        </div>
+    </div>
+{% endblock %}
 {% endblock %}
