--- a/templates/code_promo/index.html.twig
+++ b/templates/code_promo/index.html.twig
@@ -1,5 +1,5 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'baseBack.html.twig' %}
+{% block code%}
 {% block title %}CodePromo index{% endblock %}
 
 {% block body %}
@@ -38,4 +38,5 @@
     </table>
 
     <a href="{{ path('app_code_promo_new') }}">Create new</a>
+{% endblock %}
 {% endblock %}
