--- a/templates/code_promo/new.html.twig
+++ b/templates/code_promo/new.html.twig
@@ -1,5 +1,5 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'baseBack.html.twig' %}
+{% block code%}
 {% block title %}New CodePromo{% endblock %}
 
 {% block body %}
@@ -8,4 +8,5 @@
     {{ include('code_promo/_form.html.twig') }}
 
     <a href="{{ path('app_code_promo_index') }}">back to list</a>
+{% endblock %}
 {% endblock %}
