--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -48,6 +48,17 @@
                                         <h5 class="card-title"></h5>
                                         <div class="table-responsive">
 
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-outline-dark btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                                <i class="fas fa-sort-amount-up"></i> Trier par
+                                            </button>
+                                            <ul class="dropdown-menu">
+                                                <li><a class="dropdown-item" href="{{ path('tri_par_nom') }}">Nom</a></li>
+                                                <li><a class="dropdown-item" href="{{ path('tri_par_prix') }}">Prix</a></li>
+                                            </ul>
+                                        </div>
+
+
                                        <form action="{{ path('rechercher_panier') }}" method="GET">
                                             <form action="{{ path('rechercher_panier') }}" method="GET">
                                             <div class="input-group mt-3" style="max-width: 320px; margin-left: auto;">
@@ -103,12 +114,9 @@
                                                 <p>Total des prix : {{ totalPrix }} DT</p>
                                             {% endif %}
                                             <a href="{{ path('liste_produits') }}" class="btn btn-outline-info me-2">Ajouter autre produits</a>
-                                            <a href="{{ path('ajouter_commande') }}" class="btn btn-outline-info">Passer votre commande</a>                                        
-                                        </div>
-                                    </div>
-                                   
+                                            <a href="{{ path('ajouter_commande') }}" class="btn btn-outline-info">Passer votre commande</a>     
 
-                                    <div id="searchResults" class="mt-3">
+                                        <div id="searchResults" class="mt-3">
                                         <script>
                                             $(document).ready(function() {
                                                 $('#searchInput').on('input', function() {
@@ -132,8 +140,9 @@
                                                 });
                                             });
                                         </script>
-                                    </div>
-                                </div>
+                                     </div>
+                               </div>
+                              
                             </div>
                         </div>
                     </section>
@@ -142,4 +151,5 @@
         </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+   
 {% endblock %}
