--- a/templates/utilisateur/age_stat.html.twig
+++ b/templates/utilisateur/age_stat.html.twig
@@ -36,9 +36,9 @@
                 }]
             },
             options: {
-                responsive: false, // Disable chart responsiveness
-                maintainAspectRatio: false, // Disable aspect ratio
-                aspectRatio: 1, // Set custom aspect ratio
+                responsive: false, 
+                maintainAspectRatio: false, 
+                aspectRatio: 1, 
             }
         });
     </script>
