--- a/templates/utilisateur/edit.html.twig
+++ b/templates/utilisateur/edit.html.twig
@@ -1,13 +1,12 @@
 {% extends 'baseBack.html.twig' %}
 {% block gestion%}
-{% block title %}Edit Utilisateur{% endblock %}
 
 {% block body %}
     <h1>Edit Utilisateur</h1>
 
     {{ include('utilisateur/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_utilisateur_index') }}">back to list</a>
+    <a href="{{ path('app_utilisateur_index') }}">Retour à la liste</a>
 
     {{ include('utilisateur/_delete_form.html.twig') }}
 {% endblock %}
