--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Head content here -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Login</title>
+    <link href="css/styles.css" rel="stylesheet" />
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
 <body class="bg-primary">
     <div id="layoutAuthentication">
@@ -13,22 +20,33 @@
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
                                 <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                                 <div class="card-body">
-                                    <form method="post" action="{{ path('app_login') }}">
-                                        {% if error %}
-                                            <div class="alert alert-danger">{{ error }}</div>
-                                        {% endif %}
-                                        {% if app.user %}
-                                            <div class="mb-3">
-                                                You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-                                            </div>
-                                        {% endif %}
-                                        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-                                        <label for="inputEmail">Email</label>
-                                        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-                                        <label for="inputPassword">Password</label>
-                                        <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-                                        <button class="btn btn-lg btn-primary" type="submit">Sign in</button>
-                                    </form>
+                                
+                                    <form method="post" action="{{ path('app_utilisateur_index') }}">
+    {% if error %}
+        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
+
+    {% if app.user %}
+        <div class="mb-3">
+            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+        </div>
+    {% endif %}
+
+    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <label for="inputEmail">Email</label>
+    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+    <label for="inputPassword">Password</label>
+    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+
+    <input type="hidden" name="_csrf_token"
+           value="{{ csrf_token('authenticate') }}"
+    >
+
+    <button class="btn btn-lg btn-primary" type="submit">
+        Sign in
+    </button>
+</form>
+                                    
                                 </div>
                                 <div class="card-footer text-center py-3">
                                     <div class="small"><a href="register.html">Need an account? Sign up!</a></div>
