--- a/templates/utilisateur/_form.html.twig
+++ b/templates/utilisateur/_form.html.twig
@@ -1,11 +1,16 @@
 {{ form_start(form) }}
     <div class="row">
-        <div class="col-md-6">
-            <div class="form-group">
-                {{ form_label(form.nom) }}
+         <div class="col-md-6">
+        <div class="form-group">
+            {{ form_label(form.nom) }}
+            <div class="input-group">
                 {{ form_widget(form.nom, {'attr': {'class': 'form-control'}}) }}
+                <div class="invalid-feedback">
+                    {{ form_errors(form.nom) }}
+                </div>
             </div>
         </div>
+    </div>
         <div class="col-md-6">
             <div class="form-group">
                 {{ form_label(form.prenom) }}
