--- a/templates/utilisateur/edit.html.twig
+++ b/templates/utilisateur/edit.html.twig
@@ -2,7 +2,7 @@
 {% block gestion%}
 
 {% block body %}
-    <h1>Edit Utilisateur</h1>
+    <h1>Modifier utilisateur</h1>
 
     {{ include('utilisateur/_form.html.twig', {'button_label': 'Update'}) }}
 
