--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -21,7 +21,7 @@
             <!-- Navbar Search-->
             <form action="{{ path('app_utilisateur_index') }}" method="GET" class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
                 <div class="input-group">
-                    <input type="text" name="search" class="form-control" placeholder="Search by email, nom, or prenom">
+                    <input type="text" name="search" class="form-control" placeholder="Recherche par email, nom ou prénoms">
                     <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
                 </div>
             </form>
