--- a/templates/utilisateur/_form.html.twig
+++ b/templates/utilisateur/_form.html.twig
@@ -1,82 +1,4 @@
-{{ form_start(form) }}
-    <div class="row">
-         <div class="col-md-6">
-        <div class="form-group">
-            {{ form_label(form.nom) }}
-            <div class="input-group">
-                {{ form_widget(form.nom, {'attr': {'class': 'form-control'}}) }}
-                <div class="invalid-feedback">
-                    {{ form_errors(form.nom) }}
-                </div>
-            </div>
-        </div>
-    </div>
-        <div class="col-md-6">
-            <div class="form-group">
-                {{ form_label(form.prenom) }}
-                {{ form_widget(form.prenom, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-6">
-            <div class="form-group">
-                {{ form_label(form.date_nais) }}
-                {{ form_widget(form.date_nais, {'attr': {'class': 'form-control', 'type': 'date'}}) }}
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="form-group">
-                {{ form_label(form.num_tel) }}
-                {{ form_widget(form.num_tel, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-6">
-            <div class="form-group">
-                {{ form_label(form.email) }}
-                {{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="form-group">
-                {{ form_label(form.sexe) }}
-                {{ form_widget(form.sexe, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-6">
-            <div class="form-group">
-                {{ form_label(form.role) }}
-                {{ form_widget(form.role, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
-{% if form.vars.value.id is not null %}
-    <div class="row">
-        <div class="col-md-6">
-            <div class="form-group">
-                <label>Password</label>
-                <input type="password" class="form-control" value="******" disabled>
-                <small class="form-text text-muted">Password cannot be edited.</small>
-            </div>
-        </div>
-    </div>
-{% else %}
-    <div class="row">
-        <div class="col-md-6">
-            <div class="form-group">
-                {{ form_label(form.password) }}
-                {{ form_widget(form.password, {'attr': {'class': 'form-control'}}) }}
-                {{ form_errors(form.password) }}
-            </div>
-        </div>
-    </div>
-{% endif %}
-
-<button type="submit" class="btn btn-primary">{{ button_label|default('Save') }}</button>
+{{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+    {{ form_widget(form) }}
+    <button class="btn">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
