--- a/templates/utilisateur/new.html.twig
+++ b/templates/utilisateur/new.html.twig
@@ -1,29 +1,27 @@
 {% extends 'baseBack.html.twig' %}
 
 {% block gestion %}
-+
-    {% block body %}
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <div class="card">
-                        <div class="card-header">Créer un nouvel utilisateur</div>
-                        <div class="card-body">
-                            <form method="post" action="{{ path('app_utilisateur_new') }}">
-                                {{ include('utilisateur/_form.html.twig') }}
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="card-title">Créer un nouvel utilisateur</h3>
+                    </div>
+                    <div class="card-body">
+                        <form method="post" action="{{ path('app_utilisateur_new') }}">
+                            {{ include('utilisateur/_form.html.twig') }}
 
-                                <div class="form-group row mb-0">
-                                    <div class="col-md-6 offset-md-4">
-                                        <a href="{{ path('app_utilisateur_index') }}" class="btn btn-secondary">
-                                            Annuler
-                                        </a>
-                                    </div>
+                            <div class="form-group row">
+                                <div class="col-md-6 offset-md-4">
+                                    <a href="{{ path('app_utilisateur_index') }}" class="btn btn-secondary">Annuler</a>
                                 </div>
-                            </form>
-                        </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
-    {% endblock %}
+    </div>
+
 {% endblock %}
