--- a/templates/code_promo/edit.html.twig
+++ b/templates/code_promo/edit.html.twig
@@ -1,13 +1,12 @@
 {% extends 'baseBack.html.twig' %}
 {% block code%}
 
-{% block title %}Edit CodePromo{% endblock %}
 
 {% block body %}
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
-                <h1 class="text-center mb-4">Edit CodePromo</h1>
+                <h1 class="text-center mb-4">Modifier code promo</h1>
 
                 <div class="card">
                     <div class="card-body">
@@ -16,7 +15,7 @@
                 </div>
 
                 <div class="mt-4 text-center">
-                    <a href="{{ path('app_code_promo_index') }}" class="btn btn-primary">Back to List</a>
+                    <a href="{{ path('app_code_promo_index') }}" class="btn btn-primary">Retourne à la liste</a>
                 </div>
 
                 {{ include('code_promo/_delete_form.html.twig') }}
