--- a/templates/utilisateur/edit.html.twig
+++ b/templates/utilisateur/edit.html.twig
@@ -1,13 +1,24 @@
 {% extends 'baseBack.html.twig' %}
-{% block gestion%}
 
-{% block body %}
-    <h1>Modifier utilisateur</h1>
-
-    {{ include('utilisateur/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_utilisateur_index') }}">Retour à la liste</a>
-
-    {{ include('utilisateur/_delete_form.html.twig') }}
-{% endblock %}
+{% block gestion %}
+    <div class="container mt-4">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card">
+                    <div class="card-header">Modifier utilisateur</div>
+                    <div class="card-body">
+                        {{ include('utilisateur/_form.html.twig', {'button_label': 'Update'}) }}
+                    </div>
+                </div>
+                <div class="mt-3">
+                    <a href="{{ path('app_utilisateur_index') }}" class="btn btn-secondary">Retour à la liste</a>
+                </div>
+                <div class="card mt-3">
+                    <div class="card-body">
+                        {{ include('utilisateur/_delete_form.html.twig') }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
