--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -112,8 +112,8 @@
                                                     {% else %}
                                                         <p>Total des prix : {{ totalPrix }} DT</p>
                                                     {% endif %}
-                                                    <a href="{{ path('liste_produits') }}" class="btn btn-outline-info me-2">Ajouter autre produits</a>
-                                                    <a href="{{ path('ajouter_commande') }}" class="btn btn-outline-info">Passer votre commande</a>     
+                                                    {#<a href="{{ path('liste_produits') }}" class="btn btn-outline-info me-2">Ajouter autre produits</a>
+                                                    <a href="{{ path('ajouter_commande') }}" class="btn btn-outline-info">Passer votre commande</a>    #} 
 
                                                 <div id="searchResults" class="mt-3">
                                                 <script>
