modification sur template

--- a/templates/basefront.html.twig
+++ b/templates/basefront.html.twig
@@ -64,12 +64,13 @@ https://templatemo.com/tm-586-scholar
                     <!-- ***** Serach Start ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                      <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
+                      <li class="scroll-to-section"><a href="liste-produits" class="active">Home</a></li>
                       <li class="scroll-to-section"><a href="#donations">Donations</a></li>
                       <li class="scroll-to-section"><a href="#courses">Courses</a></li>
                       <li class="scroll-to-section"><a href="#team">Team</a></li>
                       <li class="scroll-to-section"><a href="#events">Events</a></li>
                       <li class="scroll-to-section"><a href="#contact">Register Now!</a></li>
+                      <li class="scroll-to-section"><a href="cart">panier</a></li>
                   </ul>
                     <a class='menu-trigger'>
                         <span>Menu</span>
