--- a/templates/commande/index.html.twig
+++ b/templates/commande/index.html.twig
@@ -8,7 +8,7 @@
                 
                  <div class="col-md-12">
                     <div class="pagetitle mb-4">
-                        <h1>Votre commande</h1>
+                        <h1>Liste des commandes</h1>
                         <nav>
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item active"><a href="liste-produits">Accueil</a></li>
@@ -22,6 +22,17 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-12">
                                 <div class="card shadow-lg ">
+                                <form action="{{ path('rechercher_commande') }}" method="GET">
+                                            <form action="{{ path('rechercher_commande') }}" method="GET">
+                                            <div class="input-group mt-3" style="max-width: 320px; margin-left: auto;">
+                                                <input type="text" name="q" id="searchInput" class="form-control" placeholder="Rechercher...">
+                                                <button type="submit" class="btn btn-primary">Rechercher</button>
+                                            </div>
+                                            
+                                        </form>
+
+                                        
+                                        
                                     <div class="card-body text-start"> <!-- Utilisation de text-start pour aligner le texte à gauche -->
                                         {% for message in app.flashes('notice') %}
                                             <div class="alert alert-success bg-success text-light border-0 alert-dismissible fade show" role="alert">
@@ -91,13 +102,7 @@
                                         </div>
                                         
 
-                                       <form action="{{ path('rechercher_commande') }}" method="GET">
-                                            <form action="{{ path('rechercher_commande') }}" method="GET">
-                                            <div class="input-group mt-3" style="max-width: 320px; margin-left: auto;">
-                                                <input type="text" name="q" id="searchInput" class="form-control" placeholder="Rechercher...">
-                                                <button type="submit" class="btn btn-primary">Rechercher</button>
-                                            </div>
-                                        </form>
+                                       
                                         
                                     </div>
                                 </div>
