--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -5,7 +5,7 @@
                     <div class="row">
                          <div class="col-md-12">
                            <div class="pagetitle mb-4">
-                                <h1>Votre panier</h1>
+                                <h1>Historique des panier</h1>
                                 <nav>
                                     <ol class="breadcrumb">
                                         <li class="breadcrumb-item active"><a href="liste-produits">Accueil</a></li>
