--- a/templates/commande/show_pdf.html.twig
+++ b/templates/commande/show_pdf.html.twig
@@ -136,18 +136,11 @@
                         <td>{{ commande.tel }}</td>
                     </tr>
                     <tr>
-                        <th>Panier</th>
-                        <td>
-        {% for item in commande.panier %}
-            <div style="margin-bottom: 10px;">
-                <strong>Nom du Produit:</strong> {{ item.name }} <br>
-                <strong>Prix:</strong> {{ item.price }} <br>
-                <strong>Quantité:</strong> {{ item.quantity }} <br>
-                <strong>Total:</strong> {{ item.quantity * item.price }} <br>
-            </div>
-        {% endfor %}
-    </td>
+    
+                     <th>Panier</th>          
+                        <td>{{ commande.panier }}</td>
                     </tr>
+
                 </tbody>
             </table>
         </div>
